@@ -1473,10 +1473,6 @@ name|getIntermediateFileTableDesc
 argument_list|(
 name|PlanUtils
 operator|.
-name|sortFieldSchemas
-argument_list|(
-name|PlanUtils
-operator|.
 name|getFieldSchemasFromRowSchema
 argument_list|(
 name|mapJoin
@@ -1485,7 +1481,6 @@ name|getSchema
 argument_list|()
 argument_list|,
 literal|"temporarycol"
-argument_list|)
 argument_list|)
 argument_list|)
 decl_stmt|;
